--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="card">
       <div >
-          <img class="card-img" src="images\image-product-desktop.jpg" alt="no img">
+          <img class="card-img" src="images/image-product-desktop.jpg" alt="no img">
             </div>
       <div class="card-content">
         <p class="re">P E R F U M E</p>
